--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
         <div id="cards-sec"></div>
     </div>
     <div id="third-sec">
+        <h2>My Skills</h2>
+        <div class="skill">
+            <h3>Python</h3>
+            <div class="barBg"><div id="python" class="bar"></div></div>
+            <span id="percent" data-value="50">0</span><span>%</span>
+        </div>
     </div>
     <script type="module" src="index.js"></script>
 </body>
