Finally fixed My Skills section bugs and made it working by modifying mostly the js

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </div>
     <div id="third-sec">
         <h2>My Skills</h2>
+        <span>(Based on Personal Goal)</span>
         <div class="skills">
         </div>
     </div>
