Main page structure completed, still no linkes added, didn't worrk on rsponsiveness, Projects section should become horizontally scrollable, apps and games need to be created in the future

--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
         <div class="skills">
         </div>
     </div>
+    <div class="footer">
+        <div id="footer-left">
+            <h3>Important Links</h3>
+            <ul>
+                <li>About Me</li>
+                <li>Contact Me</li>
+                <li>Blog</li>
+                <li>Github</li>
+            </ul>
+        </div>
+        <div id="footer-center">
+            <h3>Social Media</h3>
+            <ul>
+                <li>Telegram</li>
+                <li>Instagram</li>
+                <li>Threads</li>
+                <li>LinkedIn</li>
+                <li>Twitter</li>
+            </ul>
+        </div>
+        <div id="footer-right">
+            <p>This was the landing of my website, I invite you to explore other secions like apps, games, projects, and resume to know me better. Thnk you for your time and your sight.</p>
+        </div>
+    </div>
     <script type="module" src="index.js"></script>
 </body>
 </html>
