--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Main Intro</title>
   <link rel="stylesheet" type="text/css" href="index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="first-glance">
