--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Main Intro</title>
   <link rel="stylesheet" type="text/css" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <div class="first-glance">
@@ -23,6 +25,7 @@
                 <button class="nav-btn">My Projects</button>
                 <button class="nav-btn">Blog</button>
             </div>
+            <div id="hamburger-menu"><button id="hamburger-btn"><ion-icon name="menu-outline"></ion-icon> Menu</button></div>
         </div>
         <div id="container">
             <div id="anim">
