Made footer responsive for mobile and added linkes

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <div id="footer-center">
             <h3>Social Media</h3>
             <ul>
-                <li>Telegram</li>
-                <li>Instagram</li>
-                <li>Threads</li>
-                <li>LinkedIn</li>
-                <li>Twitter</li>
+                <li><a href="https://t.me/amirhossein19_98">Telegram</a></li>
+                <li><a href="https://instagram.com/@dailyskillseeker">Instagram</a></li>
+                <li><a href="https://threads.com/@amirhossein19_98">Threads</a></li>
+                <li><a href="https://linkedin.com/in/amirhossein-gholizadeh-629068280">LinkedIn</a></li>
+                <li><a href="https://twitter.com/skillseekeramir">Twitter</a></li>
             </ul>
         </div>
         <div id="footer-right">
