Changed time & weather button behavior on hover

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="header">
             <div id="weather-time-sec">
                 <button id="weather-btn">
-                    <span id="time"></span>
+                    <div id="time-sec"><div id="time-date"><span id="time"></span><span id="date"></span></div><div id="loc"></div></div>
                     <span id="time-weather-seperator">|</span>
                     <span id="weather-icon"></span><span id="temp"></span>
                 </button>
