fixed header buttons behavior bugs in mobile devices

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <button class="nav-btn">My Projects</button>
                 <button class="nav-btn">Blog</button>
             </div>
-            <div id="hamburger-menu"><button id="hamburger-btn"><ion-icon name="menu-outline"></ion-icon> Menu</button></div>
+            <div id="hamburger-menu">
+                <button id="hamburger-btn"><ion-icon name="menu-outline"></ion-icon> Menu</button>
+            </div>
         </div>
         <div id="container">
             <div id="anim">
