--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
                 <button class="nav-btn">Blog</button>
             </div>
             <div id="hamburger-menu">
-                <button id="hamburger-btn"><ion-icon name="menu-outline"></ion-icon> Menu</button>
+                <button id="hamburger-btn">
+                    <ion-icon name="menu-outline"></ion-icon><span> Menu</span>
+                    <a class="menu-items">></a>
+                    <a class="menu-items">Games</a>
+                    <a class="menu-items">Apps</a>
+                    <a class="menu-items">Resume</a>
+                    <a class="menu-items">Projects</a>
+                    <a class="menu-items">Blog</a>
+                </button>
             </div>
         </div>
         <div id="container">
