added link to one of the menu elements to test on my phone

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div id="hamburger-menu">
                 <button id="hamburger-btn">
                     <ion-icon name="menu-outline"></ion-icon><span> Menu</span>
-                    <a class="menu-items">></a>
-                    <a class="menu-items">Games</a>
-                    <a class="menu-items">Apps</a>
-                    <a class="menu-items">Resume</a>
-                    <a class="menu-items">Projects</a>
-                    <a class="menu-items">Blog</a>
+                    <a href="#" class="menu-items">></a>
+                    <a href="https://www.google.com" class="menu-items">Games</a>
+                    <a href="#" class="menu-items">Apps</a>
+                    <a href="#" class="menu-items">Resume</a>
+                    <a href="#" class="menu-items">Projects</a>
+                    <a href="#" class="menu-items">Blog</a>
                 </button>
             </div>
         </div>
