Fixed menu buttons not working on mobile devices by adding a condition into it's javascript eventlistener and changing it from a button to a div

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                 <button class="nav-btn">My Projects</button>
                 <button class="nav-btn">Blog</button>
             </div>
-            <div id="hamburger-menu">
-                <button id="hamburger-btn">
-                    <ion-icon name="menu-outline"></ion-icon><span> Menu</span>
-                    <a href="#" class="menu-items">></a>
-                    <a href="https://www.google.com" class="menu-items">Games</a>
-                    <a href="#" class="menu-items">Apps</a>
-                    <a href="#" class="menu-items">Resume</a>
-                    <a href="#" class="menu-items">Projects</a>
-                    <a href="#" class="menu-items">Blog</a>
-                </button>
-            </div>
+                <div id="hamburger-menu">
+                    <div id="hamburger-btn">
+                        <ion-icon name="menu-outline"></ion-icon><span> Menu</span>
+                        <a class="menu-items" id="shrinker">></a>
+                        <a href="https://www.google.com" class="menu-items" id="games">Games</a>
+                        <a href="#" class="menu-items" id="apps">Apps</a>
+                        <a href="#" class="menu-items" id="resume">Resume</a>
+                        <a href="#" class="menu-items" id="projects">Projects</a>
+                        <a href="#" class="menu-items" id="blog">Blog</a>
+                    </div>
+                </div>
         </div>
         <div id="container">
             <div id="anim">
