--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <title>Main Intro</title>
+  <title>Amirhossein's Website</title>
   <link rel="stylesheet" type="text/css" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -27,9 +27,9 @@
             </div>
                 <div id="hamburger-menu">
                     <div id="hamburger-btn">
-                        <ion-icon name="menu-outline"></ion-icon><span> Menu</span>
+                        <ion-icon name="menu-outline"></ion-icon><span>Menu</span>
                         <a class="menu-items" id="shrinker">></a>
-                        <a href="https://www.google.com" class="menu-items" id="games">Games</a>
+                        <a href="#" class="menu-items" id="games">Games</a>
                         <a href="#" class="menu-items" id="apps">Apps</a>
                         <a href="#" class="menu-items" id="resume">Resume</a>
                         <a href="#" class="menu-items" id="projects">Projects</a>
@@ -39,7 +39,12 @@
         </div>
         <div id="container">
             <div id="anim">
-                <span>&lt;</span><span id="slash">/</span><span>&gt;</span>
+                <div id="easteregg">
+                    <span class="greatLessSymbols">&lt;</span>
+                    <button href="https://github.com/Amirhossein77-98" id="easteregg-btn">Follow my Github!</button>
+                    <span id="slash">/</span>
+                    <span class="greatLessSymbols">&gt;</span>
+                </div>
             </div>
             <div id="welcome">
                 <p>Hi, welcome to</p>
