Removed button href link in html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="anim">
                 <div id="easteregg">
                     <span class="greatLessSymbols">&lt;</span>
-                    <button href="https://github.com/Amirhossein77-98" id="easteregg-btn">Follow my Github!</button>
+                    <button id="easteregg-btn">Follow my Github!</button>
                     <span id="slash">/</span>
                     <span class="greatLessSymbols">&gt;</span>
                 </div>
