Added certificates section and made it responsive

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
         <div class="skills">
         </div>
     </div>
+    <div id="fourth-sec">
+        <h2>Certificates</h2>
+        <div id="certificates-sec"></div>
+    </div>
     <div class="footer">
         <div id="footer-left">
             <h3>Important Links</h3>
