--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div id="navbar-sec">
                 <button class="nav-btn">Games</button>
-                <button class="nav-btn">Apps</button>
+                <a href="/apps/Calulator/index.html"><button class="nav-btn">Apps</button></a>
                 <button class="nav-btn">Resume</button>
                 <button class="nav-btn">My Projects</button>
                 <button class="nav-btn">Blog</button>
@@ -30,7 +30,7 @@
                         <ion-icon name="menu-outline"></ion-icon><span>Menu</span>
                         <a class="menu-items" id="shrinker">></a>
                         <a href="#" class="menu-items" id="games">Games</a>
-                        <a href="#" class="menu-items" id="apps">Apps</a>
+                        <a href="/apps/Calulator/index.html" class="menu-items" id="apps">Apps</a>
                         <a href="#" class="menu-items" id="resume">Resume</a>
                         <a href="#" class="menu-items" id="projects">Projects</a>
                         <a href="#" class="menu-items" id="blog">Blog</a>
