Made it more responsive (still not finished), changed checkbox style and items display

--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -16,12 +16,21 @@
         </div>
         <div id="container">
             <div id="left-panel">
-                <section class="left-panel-items">+ Add</section>
-                <section class="left-panel-items">Today</section>
-                <section class="left-panel-items">Shopping List</section>
-                <section class="left-panel-items">Ideas</section>
+                <section class="left-panel-items" id="add">+ Add</section>
+                <section class="left-panel-items" id="today">Today</section>
+                <section class="left-panel-items" id="shop">Shopping List</section>
+                <section class="left-panel-items" id="ideas">Ideas</section>
             </div>
-            <div id="right-panel">main</div>
+            <div id="right-panel">
+                <span class="todo-item">
+                    <label class="check-box">
+                        <input type="checkbox">
+                        <span></span>
+                        gi
+                    </label>
+                </span>
+            </div>
         </div>
+        <script src="todo.js"></script>
     </body>
 </html>
