--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -16,10 +16,10 @@
         </div>
         <div id="container">
             <div id="left-panel">
-                <section class="left-panel-items" id="add">+ Add</section>
-                <section class="left-panel-items" id="today">Today</section>
-                <section class="left-panel-items" id="shop">Shopping List</section>
-                <section class="left-panel-items" id="ideas">Ideas</section>
+                <section class="left-panel-items" id="add"><ion-icon name='add-circle-outline'></ion-icon>Add</section>
+                <section class="left-panel-items" id="today"><ion-icon name='today-outline'></ion-icon>Today</section>
+                <section class="left-panel-items" id="shop"><ion-icon name='cart-outline'></ion-icon>Shopping List</section>
+                <section class="left-panel-items" id="ideas"><ion-icon name='flash-outline'></ion-icon>Ideas</section>
             </div>
             <div id="right-panel">
                 <span class="todo-item">
