Fixed the UI of login popup and form. Didn't touch the js.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             <p>This was the landing of my website, I invite you to explore other secions like apps, games, projects, and resume to know me better. Thnk you for your time and your sight.</p>
         </div>
     </div>
+    <button id="login-btn">Login</button>
+    <div id="login-container"></div>
     <script type="module" src="index.js"></script>
 </body>
 </html>
