--- a/modules/signinup/signinup.html
+++ b/modules/signinup/signinup.html
@@ -1,13 +1,27 @@
 <link rel="stylesheet" type="text/css" href="modules/signinup/signinup.css">
 
-<div class="loginModal">
+<div id="loginModal" class="loginForm">
     <div id="head"><h2>LogIn</h2></div>
     <form method="post">
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
-        <button id="signin">SignIn</button> <div id="forgot">Forgot Password?</div>
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <section><button id="signin">SignIn</button> <div id="forgot">Forgot Password?</div></section>
     </form>
-    <div id="signupq"></div>
+    <div id="signupq">
+        <button id="signupq-btn">Don't have an account? SignUp!</button>
+    </div>
+</div>
+
+<div id="signupModal" class="loginForm">
+    <div id="head"><h2>SignUp</h2></div>
+    <form method="post">
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button>SignUp</button>
+    </form>
+    <div id="signupq">
+        <button id="signinq-btn">Don't have an account? SignUp!</button>
+    </div>
 </div>
 
 <!-- <script src="signinup.js"></script> -->
