Fixed last problems of login popup and moved login button to the navbar

--- a/modules/signinup/signinup.html
+++ b/modules/signinup/signinup.html
@@ -20,7 +20,7 @@
         <button>SignUp</button>
     </form>
     <div id="signupq">
-        <button id="signinq-btn">Don't have an account? SignUp!</button>
+        <button id="signinq-btn">Signed Up before? LogIn now!</button>
     </div>
 </div>
 
