--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <button class="nav-btn">Resume</button>
                 <button class="nav-btn">My Projects</button>
                 <button class="nav-btn">Blog</button>
+                <button class="nav-btn" id="login-btn">Login</button>
             </div>
                 <div id="hamburger-menu">
                     <div id="hamburger-btn">
@@ -133,7 +134,6 @@
             <p>This was the landing of my website, I invite you to explore other secions like apps, games, projects, and resume to know me better. Thnk you for your time and your sight.</p>
         </div>
     </div>
-    <button id="login-btn">Login</button>
     <div id="login-container"></div>
     <script type="module" src="index.js"></script>
 </body>
