Added login menu to todo app

--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -12,7 +12,8 @@
         <div id="topbar">
             <section id="title">Todo List</section>
             <section id="last-update">Last Updated: </section>
-            <section id="menu"><ion-icon name="menu-outline"></ion-icon></section>
+            <section id="menu-btn"><ion-icon name="menu-outline"></ion-icon></section>
+            <div id="menu">rsgfsdfsfdfvsrvsdvsrvefsdvsdver</div>
         </div>
         <div id="container">
             <div id="left-panel">
