--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -13,7 +13,7 @@
             <section id="title">Todo List</section>
             <section id="last-update">Last Updated: </section>
             <section id="menu-btn"><ion-icon name="menu-outline"></ion-icon></section>
-            <div id="menu">rsgfsdfsfdfvsrvsdvsrvefsdvsdver</div>
+            <div id="menu"></div>
         </div>
         <div id="container">
             <div id="left-panel">
@@ -32,6 +32,6 @@
                 </span>
             </div>
         </div>
-        <script src="todo.js"></script>
+        <script type="module" src="todo.js"></script>
     </body>
 </html>
