--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -32,6 +32,9 @@
                 </span>
             </div>
         </div>
+        <script type="module" src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
+        <script type="module" src="https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js"></script>
+        <script type="module" src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
         <script type="module" src="todo.js"></script>
     </body>
 </html>
