--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
         </div>
     </div>
     <div id="login-container"></div>
+    <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
     <script type="module" src="index.js"></script>
 </body>
 </html>
