--- a/modules/signinup/signinup.html
+++ b/modules/signinup/signinup.html
@@ -3,8 +3,8 @@
     <div id="loginModal" class="loginForm">
         <div id="head"><h2>LogIn</h2></div>
         <form id="signin-form">
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
+            <input id="email-login" type="email" name="email" placeholder="Email" required>
+            <input id="password-login" type="password" name="password" placeholder="Password" required>
             <section><button type="submit" id="signin">SignIn</button> <div id="forgot">Forgot Password?</div></section>
         </form>
         <div id="signupq">
