--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -32,6 +32,15 @@
                 </span>
             </div>
         </div>
+        <div id="add-popup">
+            <form id="add-form">
+                <label>Title</label>
+                <input type="text" id="todo-title-input" placeholder="e.g: Buy Groceries" required>
+                <label>Description</label>
+                <input type="text" id="todo-desc-input" placeholder="e.g: carrot, cucumber, ...">
+                <button type="submit">Add</button>
+            </form>
+        </div>
         <script type="module" src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
         <script type="module" src="https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js"></script>
         <script type="module" src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
