Implemented Option to move done tasks into done section (not completed)

--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -23,20 +23,10 @@
                 <section class="left-panel-items" id="ideas"><ion-icon name='flash-outline'></ion-icon>Ideas</section>
             </div>
             <div id="right-panel">
-                <div id="items-title">
-                    <span>Title</span>
-                    <span>Description</span>
-                </div>
-                <div id="items-sec">
-                    <span class="todo-item">
-                        <label class="check-box">
-                            <input type="checkbox">
-                            <span></span>
-                            gi
-                        </label>
-                        kesh
-                    </span>
-                </div>
+                <div id="items-title"><span>Title</span><span>Description</span></div>
+                <div id="items-sec"></div>
+                <div id="done-title" style="margin-top: 50px; font-size: 20px;">Done</div>
+                <div id="done-items"></div>
             </div>
         </div>
         <div id="add-popup">
