Added option to get user's name when they register and changed the functionality of last update btn so now it opens user login/register panel, and menu btn is no longer functional for now

--- a/modules/signinup/signinup.html
+++ b/modules/signinup/signinup.html
@@ -15,6 +15,7 @@
     <div id="signupModal" class="loginForm">
         <div id="head"><h2>SignUp</h2></div>
         <form id="signup-form">
+            <input id="name-reg" type="text" placeholder="Your Name or Nickname" required>
             <input id="email-reg" type="email" name="email" placeholder="Email" required>
             <input id="pass-reg" type="password" name="password" placeholder="Password" required>
             <button type="submit" id="signup-btn">SignUp</button>
