--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -11,9 +11,9 @@
     <body>
         <div id="topbar">
             <section id="title">Todo List</section>
-            <section id="last-update">Last Updated: </section>
+            <section id="user-sec">Login or Register</section>
             <section id="menu-btn"><ion-icon name="menu-outline"></ion-icon></section>
-            <div id="menu"></div>
+            <div id="login-register-popup"></div>
         </div>
         <div id="container">
             <div id="left-panel">
