--- a/apps/todo/todo.html
+++ b/apps/todo/todo.html
@@ -18,6 +18,7 @@
         <div id="container">
             <div id="left-panel">
                 <section class="left-panel-items" id="add"><ion-icon name='add-circle-outline'></ion-icon>Add</section>
+                <section class="left-panel-items" id="all"><ion-icon name="apps-outline"></ion-icon>All</section>
                 <section class="left-panel-items" id="today"><ion-icon name='today-outline'></ion-icon>Today</section>
                 <section class="left-panel-items" id="shop"><ion-icon name='cart-outline'></ion-icon>Shopping List</section>
                 <section class="left-panel-items" id="ideas"><ion-icon name='flash-outline'></ion-icon>Ideas</section>
