--- a/apps/Calculator/calculator.html
+++ b/apps/Calculator/calculator.html
@@ -3,7 +3,7 @@
 <head>
 	<title>My Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="calculator.css">
 </head>
 <body>
 	<h1 id="title">Calculator</h1>
@@ -26,6 +26,6 @@
         </div>
         <div id="last-row"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="calculator.js"></script>
 </body>
 </html>
